Release version 1.0.15 - Improved on growl width issue (too wide in some cases).

--- a/src/growl.styl
+++ b/src/growl.styl
@@ -79,6 +79,7 @@ div.growlBox
         margin 10px 0 0 0
 
     .message
+        display inline
         font-size inherit
         line-height inherit
 
